# yoitsu

./: .gitignore  CLAUDE.md  README.md  SIMPLIFICATION-PROGRESS.md  SYSTEM-PLAN.md  TODO-adr-0013.md  TODO-execution.md  TODO.md  phase-2-observation-loop-closure.md  phase-2-step-2-observation-emission-completion.md  phase-3-step-3-reviewer-github-context.md  pyproject.toml
config/: trenni.yaml
yoitsu/: README.md  SYSTEM-PLAN.md  TODO.md  cli.py  client.py  process.py  pyproject.toml  tui.py
yoitsu/.pi/: superpowers-state.json
yoitsu/.task/: config.json  state.json
yoitsu/deploy/podman/: yoitsu-python-base.Containerfile
yoitsu/deploy/quadlet/: README.md  postgres.env.example  trenni.dev.yaml  trenni.env.example  yoitsu-pasloe-data.volume  yoitsu-submit.container  yoitsu-trenni.container  yoitsu.pod
yoitsu/docs/: architecture.md
yoitsu/docs/adr/: 0006-task-level-publication.md  0010-self-optimization-governance.md  0012-factorio-task-source.md  0013-artifact-store.md  0015-bundle-as-repo.md  0016-capability-model.md  0017-observation-unified-interface.md
yoitsu/docs/archive/: claude-architecture.md
yoitsu/evo/factorio/: __init__.py
yoitsu/examples/: smoke-planner-eval.yaml  tasks-2026-03-25-quadlet-roadmap.yaml  tasks.yaml
yoitsu/scripts/: batch-submit.sh  build-job-image.sh  build-python-base.sh  cleanup-test-data.sh  deploy-quadlet.sh  extract-factorio-bundle.sh  reset-factorio-smoke-env.sh  setup.sh  smoke-spawn-monitor.sh
yoitsu/smoke/: SMOKE.txt
yoitsu/test-tasks/: 03-spawn-test.yaml  04-version-bump.yaml  hello.yaml  smoke-adr-implementation.yaml
yoitsu/tests/: conftest.py  test_cli.py  test_client.py  test_factorio_optimizer_prompt.py  test_factorio_preparation.py  test_factorio_smoke_reset_script.py  test_process.py  test_trenni_bootstrap.py
yoitsu/yoitsu/: cli.py  process.py  tui.py
(+241 files in other folders)
